provarAnt/00D190000000ZY2EAM/objects/SalesIQ__NewAccExceptions__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NewAccExceptions</relationshipLabel>
        <relationshipName>NewAccExceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__IsResolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsResolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NewAccExceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NewAccExceptions</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewAccExceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>